Simplift Travis script, renamed to 'answer_bbbq_1'

--- a/vignettes/demo.Rmd
+++ b/vignettes/demo.Rmd
@@ -117,7 +117,7 @@ binding_strength_threshold <- 5.0
 Here, the BBBQ is answered:
 
 ```{r}
-df <- bbbq::answer_bbbq(
+df <- bbbq::answer_bbbq_1(
   fasta_filename = fasta_filename,
   alleles = alleles,
   binding_strength_threshold = binding_strength_threshold
@@ -160,7 +160,7 @@ epitopeome_filename = tempfile(".fasta")
 Answering the BBBQ again (and ignorening its result):
 
 ```{r}
-bbbq::answer_bbbq(
+bbbq::answer_bbbq_1(
   fasta_filename = fasta_filename,
   alleles = alleles,
   binding_strength_threshold = binding_strength_threshold,
