--- a/vignettes/research.Rmd
+++ b/vignettes/research.Rmd
@@ -4,7 +4,7 @@ author: "Richel J.C. Bilderbeek"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Demo}
+  %\VignetteIndexEntry{Research}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
